2015-08-13  Andreas Schwab  <schwab@suse.de>

	* gcc.dg/tree-ssa/vrp33.c: Add -fno-tree-fre.

2015-08-13  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/62164
	* g++.dg/torture/pr62164.C: New.

2015-08-13  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67191
	* gcc.dg/torture/pr67191.c: New testcase.
	* g++.dg/torture/pr67191.C: Likewise.

2015-08-13  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66502
	PR tree-optimization/67167
	* gcc.dg/tree-ssa/ssa-fre-46.c: New testcase.

2015-08-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53330
	* g++.dg/init/new42.C: New.

2015-08-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/67071
	* gcc.target/powerpc/pr67071-1.c: New file to test PR 67071 new
	vector constants.
	* gcc.target/powerpc/pr67071-2.c: Likewise.
	* gcc.target/powerpc/pr67071-3.c: Likewise.

2015-08-12  Marek Polacek  <polacek@redhat.com>

	PR c++/55095
	* c-c++-common/Wshift-overflow-6.c: New test.
	* c-c++-common/Wshift-overflow-7.c: New test.
	* g++.dg/cpp1y/left-shift-2.C: New test.

2015-08-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/52742
	* g++.dg/cpp0x/pr52742.C: New.

2015-08-12  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/builtin_target.c (check_intel_cpu_model):
	Check Knights Landing support.

2015-08-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/47461
	* g++.dg/warn/Wunused-result-1.C: New.

2015-08-12  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/ssa-fre-47.c: New testcase.
	* gcc.dg/tree-ssa/ssa-fre-48.c: Likewise.
	* gcc.dg/tree-ssa/ssa-fre-49.c: Likewise.
	* g++.dg/tree-ssa/pr61034.C: Adjust.
	* gcc.dg/fold-compare-2.c: Likewise.
	* gcc.dg/pr50763.c: Likewise.
	* gcc.dg/predict-3.c: Likewise.
	* gcc.dg/tree-ssa/20030709-2.c: Likewise.
	* gcc.dg/tree-ssa/pr19831-3.c: Likewise.
	* gcc.dg/tree-ssa/pr20657.c: Likewise.
	* gcc.dg/tree-ssa/pr21001.c: Likewise.
	* gcc.dg/tree-ssa/pr37508.c: Likewise.
	* gcc.dg/tree-ssa/vrp04.c: Likewise.